@@ -79,6 +79,38 @@ end
 
 ########################################################################
 
+script, elseif A, x, begin
+  if(x == 0) then( return(1) )
+  elseif(x == 1) then( return(2) )
+  else( return(3) )
+end
+
+script, elseif B, x, begin
+  if(x == 0)
+  elseif(x == 1) then( return(2) )
+end
+
+script, elseif C, x, begin
+  if(x == 0)
+  elseif(x == 1)
+  else( return(3) )
+end
+
+script, elseif tests, begin
+  $0="elseif tests"
+  assert(elseif A(0) == 1)
+  assert(elseif A(1) == 2)
+  assert(elseif A(2) == 3)
+  assert(elseif B(0) == 0)
+  assert(elseif B(1) == 2)
+  assert(elseif B(2) == 0)
+  assert(elseif C(0) == 0)
+  assert(elseif C(1) == 0)
+  assert(elseif C(2) == 3)
+end
+
+########################################################################
+
 script, switch A, x, begin
   return(1)
   switch (x) do(
@@ -164,6 +196,7 @@ script, hspeak tests, begin
   global 5000 := 99999
   assert(global 5000 == 99999)
 
+  elseif tests
   switch tests
 end
 
